; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video-gpu-encode.c_stop_gpu_encoding_thread.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-video-gpu-encode.c_stop_gpu_encoding_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_core_video = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @stop_gpu_encoding_thread(%struct.obs_core_video* %0) #0 {
  %2 = alloca %struct.obs_core_video*, align 8
  store %struct.obs_core_video* %0, %struct.obs_core_video** %2, align 8
  %3 = load %struct.obs_core_video*, %struct.obs_core_video** %2, align 8
  %4 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.obs_core_video*, %struct.obs_core_video** %2, align 8
  %9 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %8, i32 0, i32 3
  %10 = call i32 @os_atomic_set_bool(i32* %9, i32 1)
  %11 = load %struct.obs_core_video*, %struct.obs_core_video** %2, align 8
  %12 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @os_sem_post(i32 %13)
  %15 = load %struct.obs_core_video*, %struct.obs_core_video** %2, align 8
  %16 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @pthread_join(i32 %17, i32* null)
  %19 = load %struct.obs_core_video*, %struct.obs_core_video** %2, align 8
  %20 = getelementptr inbounds %struct.obs_core_video, %struct.obs_core_video* %19, i32 0, i32 0
  store i32 0, i32* %20, align 4
  br label %21

21:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @os_atomic_set_bool(i32*, i32) #1

declare dso_local i32 @os_sem_post(i32) #1

declare dso_local i32 @pthread_join(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
